--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -77,24 +77,23 @@
 
 @layer utilities {
   .emptyCard {
-    @apply flex flex-col items-center  
+    @apply flex flex-col items-center
     overflow-y-auto overflow-x-hidden p-4 m-4;
   }
 
   .card {
-    @apply m-10
+    @apply
+    m-10
     p-4
-    flex 
-    flex-col 
-    items-center  
-    bg-slate-200 
-    border 
-    border-slate-300 
-    rounded-lg 
+    flex
+    flex-col
+    items-center
+    bg-slate-200
+    border
+    border-slate-300
+    rounded-lg
     shadow-sm
     w-[300px]
-    overflow-y-auto 
-    overflow-x-hidden;
   }
 
   .labelInputBox {
@@ -113,6 +112,14 @@
     @apply text-2xl font-bold text-center text-blue-600 p-2;
   }
 
+  .formSubHeader {
+    @apply text-lg font-bold text-center text-blue-600 p-2;
+  }
+
+  .deleteHeader {
+    @apply text-2xl font-bold text-center text-red-600 p-2;
+  }
+
   .errorBox{
     @apply h-3 w-full flex flex-col justify-center items-center;
   }
@@ -122,7 +129,7 @@
   }
 
   .failure {
-    @apply my-1 text-sm font-bold text-center text-red-500 text-wrap;
+    @apply my-2 text-sm font-bold text-center text-red-500 text-wrap;
   }
 
   .scrollbar-hidden {
