--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -27,9 +27,9 @@
 
         <div class="errorBox">
           <!-- SUCCESS MESSAGE -->
-          <div id="successMessageDiv" th:if="${message}" th:text="${message}" style="color: green;"></div>
+          <div id="successMessageDiv" th:if="${message}" th:text="${message}" class="success"></div>
           <!-- ERROR MESSAGE -->
-          <div id="errorMessageDiv" th:if="${error}" th:text="${error}" style="color: red;"></div>
+          <div id="errorMessageDiv" th:if="${error}" th:text="${error}" class="failure"></div>
         </div>
 
         <form class="formContainer" th:action="@{/signup}" method="post">
