--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1204,6 +1204,10 @@ header {
   margin-top: 1rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .block {
   display: block;
 }
@@ -1256,6 +1260,14 @@ header {
   height: 100vh;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .w-1 {
   width: 0.25rem;
 }
@@ -1290,6 +1302,10 @@ header {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .flex-shrink {
@@ -1541,8 +1557,8 @@ header {
   padding-bottom: 1rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-left {
@@ -1773,6 +1789,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0.75rem;
 }
 
 .success {
