--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -58,6 +58,28 @@
           </div>
 
           <div class="labelInputBox">
+          <label class="label" for="firstName">First Name:</label>
+          <input
+            class="input"
+            type="text"
+            id="firstName"
+            name="firstName"
+            placeholder="First Name"
+          />
+          </div>
+
+          <div class="labelInputBox">
+          <label class="label" for="lastName">Last Name:</label>
+          <input
+            class="input"
+            type="text"
+            id="lastName"
+            name="lastName"
+            placeholder="Last Name"
+          />
+          </div>
+
+          <div class="labelInputBox">
           <label class="label" for="password">Password:</label>
           <input
             class="input"
