UI changes to allow for better navigation to user profile updates and account details

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,12 +35,8 @@
     <div class="container">
       <div class="card">
         <div class="headerBox">
-          <h1 class="formHeader">Congratulations!</h1>
+          <h4 class="formHeader">This will be the collection feed...</h4>
         </div>
-        <form class="formContainer" name="logoutForm" th:action="@{/logout}" method="post">
-          <p class="m-2 text-wrap ">There is only one thing left to do...</p>
-          <button class="button">Sign Out</button>
-        </form>
       </div>
     </div>
   </body>
