--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -13,9 +13,14 @@
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
-          <li>
-            <a href="/update-profile">
+          <li class="flex items-center">
+            <a class="text-xl" href="/profile">
               <span>&#8592;</span>
+            </a>
+          </li>
+          <li>
+            <a class="text-sm" href="/logout">
+              <span>Logout</span>
             </a>
           </li>
         </ul>
@@ -23,7 +28,7 @@
     </header>
     <div class="profileContainer">
       <div class="h-auto w-full">
-        <div class="headerBox">
+        <div class="flex flex-col justify-end items-center mt-4 p-2">
           <h1 class="formHeader">Account Details</h1>
         </div>
 
