--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -14,6 +14,10 @@
   header {
     @apply w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
   }
+
+  nav {
+    @apply h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
+  }
 }
 
 @layer components {
