--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -795,6 +795,37 @@ header {
   }
 }
 
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  height: 3rem;
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  nav {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  nav {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  nav {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px) {
+  nav {
+    width: 50%;
+  }
+}
+
 .container {
   width: 100%;
 }
@@ -1212,6 +1243,10 @@ header {
   margin-top: 2rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1236,8 +1271,20 @@ header {
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
 .h-20 {
   height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-3 {
@@ -1272,12 +1319,24 @@ header {
   width: 0.25rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
 .w-2 {
   width: 0.5rem;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-3 {
@@ -1330,12 +1389,28 @@ header {
   resize: both;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1368,6 +1443,10 @@ header {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .overflow-hidden {
@@ -1572,6 +1651,11 @@ header {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs {
