--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,7 +38,7 @@
             <div class="grid grid-cols-4 gap-4 w-full">
               <!-- Profile Picture -->
               <div class="flex justify-center items-center">
-              <img class="w-16 h-16 rounded-full" th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}" alt="Profile Picture" />
+              <img class="w-16 h-16 rounded-full bg-white" th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}" alt="Profile Picture" />
               </div>
               <!-- Collections -->
               <div class="flex flex-col justify-center items-center">
