--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,9 @@
       <div class="card">
         <div class="headerBox">
           <h4 class="formHeader">This will be the collection feed...</h4>
+          <div class="flex justify-center items-center">
+            <a href="/create-collection" class="deleteButton bg-slate-400 hover:bg-slate-400">Create A Collection</a>
+          </div>
         </div>
       </div>
     </div>
